RESOLVED FIXED 129371
[CSSRegions] ASSERTION FAILED: !m_regionsInvalidated in RenderFlowThread::regionAtBlockOffset
https://bugs.webkit.org/show_bug.cgi?id=129371
Summary [CSSRegions] ASSERTION FAILED: !m_regionsInvalidated in RenderFlowThread::reg...
Mihnea Ovidenie
Reported 2014-02-26 07:20:48 PST
When i load a page with a video from a named flow displayed in the overflow area of a region, i hit the above assert with the following trace: ASSERTION FAILED: !m_regionsInvalidated /Volumes/SSD/WebKit/Source/WebCore/rendering/RenderFlowThread.cpp(426) : WebCore::RenderRegion *WebCore::RenderFlowThread::regionAtBlockOffset(const WebCore::RenderBox *, WebCore::LayoutUnit, bool, WebCore::RenderFlowThread::RegionAutoGenerationPolicy) 1 0x1087140b0 WTFCrash 2 0x10fbdabc7 WebCore::RenderFlowThread::regionAtBlockOffset(WebCore::RenderBox const*, WebCore::LayoutUnit, bool, WebCore::RenderFlowThread::RegionAutoGenerationPolicy) 3 0x10fbda960 WebCore::RenderFlowThread::regionForCompositedLayer(WebCore::RenderLayer&) 4 0x10fbdaeb6 WebCore::RenderFlowThread::updateLayerToRegionMappings(WebCore::RenderLayer&, WTF::HashMap<WebCore::RenderLayer*, WebCore::RenderNamedFlowFragment*, WTF::PtrHash<WebCore::RenderLayer*>, WTF::HashTraits<WebCore::RenderLayer*>, WTF::HashTraits<WebCore::RenderNamedFlowFragment*> >&, WTF::HashMap<WebCore::RenderNamedFlowFragment*, WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow>, WTF::PtrHash<WebCore::RenderNamedFlowFragment*>, WTF::HashTraits<WebCore::RenderNamedFlowFragment*>, WTF::HashTraits<WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow> > >&, bool&) 5 0x10fbda3d7 WebCore::RenderFlowThread::updateAllLayerToRegionMappings() 6 0x10eba54b6 WebCore::RenderFlowThread::updateAllLayerToRegionMappingsIfNeeded() 7 0x10fbdae4a WebCore::RenderFlowThread::cachedRegionForCompositedLayer(WebCore::RenderLayer&) 8 0x10fc61e94 WebCore::RenderLayerBacking::adjustAncestorCompositingBoundsForFlowThread(WebCore::LayoutRect&, WebCore::RenderLayer const*) const 9 0x10fc5d054 WebCore::RenderLayerBacking::updateGraphicsLayerGeometry() 10 0x10fc44823 WebCore::RenderLayer::styleChanged(WebCore::StyleDifference, WebCore::RenderStyle const*) 11 0x10fc8b2f5 WebCore::RenderLayerModelObject::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 12 0x10fb62676 WebCore::RenderBox::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 13 0x10fceb2bd WebCore::RenderReplaced::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 14 0x10fc0ffcd WebCore::RenderImage::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 15 0x10fbbc90a WebCore::RenderElement::setStyle(WTF::PassRef<WebCore::RenderStyle>) 16 0x10fbbcd8e WebCore::RenderElement::setAnimatableStyle(WTF::PassRef<WebCore::RenderStyle>) 17 0x11004b1ff WebCore::Style::resolveLocal(WebCore::Element&, WebCore::Style::Change) 18 0x11004aa50 WebCore::Style::resolveTree(WebCore::Element&, WebCore::Style::Change) 19 0x11004ac10 WebCore::Style::resolveTree(WebCore::Element&, WebCore::Style::Change) 20 0x11004ac10 WebCore::Style::resolveTree(WebCore::Element&, WebCore::Style::Change) 21 0x11004a8ec WebCore::Style::resolveTree(WebCore::Document&, WebCore::Style::Change) 22 0x10e96cd06 WebCore::Document::recalcStyle(WebCore::Style::Change) 23 0x10e96927f WebCore::Document::updateStyleIfNeeded() 24 0x10ecdafff WebCore::FrameView::updateLayoutAndStyleIfNeededRecursive() 25 0x1066bb2fb WebKit::WebPage::layoutIfNeeded() 26 0x10653fada WebKit::TiledCoreAnimationDrawingArea::flushLayers() 27 0x10653fdac non-virtual thunk to WebKit::TiledCoreAnimationDrawingArea::flushLayers() 28 0x10f862cfc WebCore::LayerFlushScheduler::runLoopObserverCallback() 29 0x10f862c44 WebCore::LayerFlushScheduler::runLoopObserverCallback(__CFRunLoopObserver*, unsigned long, void*) 30 0x7fff93d02ee7 __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ 31 0x7fff93d02e57 __CFRunLoopDoObservers
Attachments
Patch (6.78 KB, patch)
2014-02-26 08:27 PST, Mihnea Ovidenie
no flags
Patch for landing (7.16 KB, patch)
2014-02-28 05:52 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2014-02-26 08:27:50 PST
Andrei Bucur
Comment 2 2014-02-27 00:48:21 PST
Comment on attachment 225257 [details] Patch r=me
Mihnea Ovidenie
Comment 3 2014-02-28 05:52:18 PST
Created attachment 225455 [details] Patch for landing
WebKit Commit Bot
Comment 4 2014-02-28 06:28:36 PST
Comment on attachment 225455 [details] Patch for landing Clearing flags on attachment: 225455 Committed r164858: <http://trac.webkit.org/changeset/164858>
WebKit Commit Bot
Comment 5 2014-02-28 06:28:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.